[base64] Use more datatypeConverter.  It's cleaner and necessary in some cases